[metadata]
name = objectionpy
version = attr: objectionpy.__version__
author = Adamanti
author_email = adam@sallome.com
url = https://codeberg.org/adamanti/objection.py
description = A modular python library for creating objection.lol projects
long_description = file: README.md
long_description_content_type = text/markdown
keywords = objection.lol, objection-lol, objectionlol, objection, generator, case, scene,
project_urls = 
    Documentation = https://adamanti.codeberg.page/objection.py/
    Bug Reports = https://codeberg.org/adamanti/objection.py/issues
    Source = https://codeberg.org/adamanti/objection.py
classifiers = 
    Topic :: Artistic Software
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3

license_files = LICENSE.txt
description_file = README.md

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where = src

